<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging> 

    <parent>
        <groupId>org.sakaiproject</groupId>
        <artifactId>master</artifactId>
        <version>11-SNAPSHOT</version>
        <relativePath>../master/pom.xml</relativePath>
    </parent>

	<name>BigBlueButton</name>
	<groupId>org.sakaiproject.bbb</groupId>
	<artifactId>bbb</artifactId>
    <version>11-SNAPSHOT</version>
    <description>Sakai BigBlueButton integrates a Sakai instance with a BigBlueButton server, allowing Sakai users to easily create and join BigBlueButton meetings from a Sakai worksite and access playback recording.</description>

    <url>http://confluence.sakaiproject.org/confluence/display/BBB</url>

    <organization>
        <name>Lancaster University (Centre for e-Science), Universidade Fernando Pessoa (UFPUV), Blindside Networks Inc(BN)</name>
        <url>http://e-science.lancs.ac.uk http://www.ufp.pt http://blindsidenetworks.com</url>
    </organization>    
    <inceptionYear>2010</inceptionYear>

	<developers>
		<developer>
            <name>Adrian Fish</name>
            <email>a.fish@lancaster.ac.uk</email>
            <organization>Lancaster University, Centre for e-Science</organization>
            <organizationUrl>http://e-science.lancs.ac.uk</organizationUrl>
            <roles>
                <role>Project Manager</role>
                <role>Developer</role>
            </roles>
            <timezone>0</timezone>
		</developer>
		<developer>
            <name>Nuno Fernandes</name>
            <email>nuno@ufp.edu.pt</email>
            <organization>Universidade Fernando Pessoa</organization>
            <organizationUrl>http://www.ufp.pt</organizationUrl>
            <roles>
                <role>Project Manager</role>
                <role>Developer</role>
            </roles>
            <timezone>0</timezone>
		</developer>
		<developer>
            <name>Jesus Federico</name>
            <email>jesus@blindsidenetworks.com</email>
            <organization>Blindside Networks Inc</organization>
            <organizationUrl>http://blindsidenetworks.com</organizationUrl>
            <roles>
                <role>Project Manager</role>
                <role>Developer</role>
            </roles>
            <timezone>-5</timezone>
		</developer>
	</developers>

    <properties>
        <!-- Build tracking  -->
        <maven.build.timestamp.format>yyMMdd_HHmm</maven.build.timestamp.format>
        <buildTimestamp>${maven.build.timestamp}</buildTimestamp>
        <buildSerial>2015040500</buildSerial>
        <!-- Regular properties -->
        <!-- entitybroker.version can be set to any version from 1.3.9 to 1.3.20, 
        by default it has been set up to 1.3.19, the one used with Sakai 2.8.2 -->
        <commons-betwixt.version>0.8</commons-betwixt.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <scm>
		<connection>scm:git:git@github.com:blindsidenetworks/bigbluebutton-sakai.git</connection>
		<developerConnection>scm:git:git@github.com:blindsidenetworks/bigbluebutton-sakai.git</developerConnection>
		<url>https://github.com/blindsidenetworks/bigbluebutton-sakai.git</url>
    </scm>

    <issueManagement>
        <system>JIRA</system>
        <url>http://jira.sakaiproject.org/jira/browse/BBB</url>
    </issueManagement>

    <licenses>
        <license>
            <name>Educational Community License, Version 2.0</name>
            <url>http://www.osedu.org/licenses/ECL-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <modules>
        <module>api</module>
        <module>bundle</module>
        <module>impl</module>
        <module>components</module>
        <module>tool</module>
    </modules>

    <distributionManagement>
        <site>
            <id>sakai-site</id>
            <name>Sakai Release Site</name>
            <url>scpexe://source.sakaiproject.org/var/www/html/release/bbb/${project.version}</url>
        </site>
    </distributionManagement>

	<repositories>
        <repository>
            <id>sakai-maven2-snapshots</id>
            <name>Sakai Maven Repo Snapshots</name>
            <layout>default</layout>
            <url>http://source.sakaiproject.org/maven2-snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>sakai-maven2</id>
            <name>Sakai Maven Repository</name>
            <layout>default</layout>
            <url>http://source.sakaiproject.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository> 
        <repository>
            <id>default</id>
            <name>Maven Repository Switchboard</name>
            <layout>default</layout>
            <url>http://repo1.maven.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
	</repositories>

    <profiles>
        <profile>
            <id>release</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <licenseplugin.phase>none</licenseplugin.phase>
            </properties>
        </profile>
        <profile>
            <id>dev</id>
            <properties>
                <licenseplugin.phase>verify</licenseplugin.phase>
            </properties>
        </profile>
    </profiles>

    <dependencyManagement>
    	<dependencies>
    	    <!-- BBB -->
            <dependency>
                <groupId>org.sakaiproject.bbb</groupId>
                <artifactId>bbb-api</artifactId>
                <version>${project.version}</version>
                <type>jar</type>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.sakaiproject.bbb</groupId>
                <artifactId>bbb-bundle</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.sakaiproject.bbb</groupId>
                <artifactId>bbb-impl</artifactId>
                <version>${project.version}</version>
                <type>jar</type>
            </dependency>
            <dependency>
                <groupId>commons-betwixt</groupId>
                <artifactId>commons-betwixt</artifactId>
                <version>${commons-betwixt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.velocity</groupId>
                <artifactId>velocity</artifactId>
                <version>1.7</version>
            </dependency>
    	</dependencies>
    </dependencyManagement>

    <build>
    	<plugins>
    		<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila.maven-license-plugin</groupId>
                <artifactId>maven-license-plugin</artifactId>
                <version>1.5.0</version>
                <configuration>
                    <basedir>${basedir}</basedir>
                    <!-- THIS IS A BRITTLE; IMPLEMENT REMOTE RESOURCE PLUGIN TO GET THIS FILE -->
                    <header>https://source.sakaiproject.org/svn/sakai/trunk/ECLv2-header-template.txt</header>
                    <!-- <header>${user.home}/.m2/license-template.txt</header> -->
                    <quiet>false</quiet>
                    <failIfMissing>true</failIfMissing>
                    <aggregate>false</aggregate>
                    <includes>
                        <include>src/**/*.java</include>
                        <include>**/test/**/*.java</include>
                        <include>src/webapp/**/*.css</include>
                        <include>src/webapp/**/*.html</include>
                        <include>src/webapp/**/*.js</include>
                        <include>src/webapp/**/*.jsp</include>
                    </includes>
                    <excludes>
                        <exclude>target/**</exclude>
                        <exclude>m2-target/**</exclude>
                        <exclude>**/*.properties</exclude>
                        <exclude>**/*.sql</exclude>
                        <exclude>**/*.TXT</exclude>
                        <exclude>**/*.xml</exclude>
                        <exclude>**/jquery*.*</exclude>
                        <exclude>src/webapp/**/lib/**/*</exclude>
                    </excludes>
                    <useDefaultExcludes>true</useDefaultExcludes>
                    <useDefaultMapping>true</useDefaultMapping>
                    <properties>
                        <!-- <name>${project.name}</name> -->
                        <year>${project.inceptionYear}-2012</year>
                        <holder>The Sakai Foundation</holder>
                        <!-- <contact>info@sakaiproject.org</contact> -->
                    </properties>
                    <encoding>UTF-8</encoding>
                </configuration>
                <executions>
                    <execution>
                        <id>check-headers</id>
                        <phase>${licenseplugin.phase}</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
    	</plugins>
    </build>

    <reporting>
        <plugins>
            <!-- JavaDocs: mvn javadoc:javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <reportSets>
                  <reportSet>
                    <id>aggregate</id>
                    <configuration>
                      <aggregate>true</aggregate>
                          <source>1.5</source>
                      <encoding>UTF-8</encoding>
                        <links>
                        <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
                        <link>http://java.sun.com/products/servlet/2.3/javadoc/</link>
                      </links>
                      <breakiterator>true</breakiterator>
                      <verbose>false</verbose>
                      <maxmemory>512m</maxmemory>
                      <additionalJOption>
                        -J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m
                      </additionalJOption>
                    </configuration>
                    <reports>
                      <report>aggregate</report>
                    </reports>
                  </reportSet>
                </reportSets>   
            </plugin>
            <!-- FindBugs: mvn findbugs:findbugs -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>1.2</version>
                <configuration>
                    <findbugsXmlOutput>true</findbugsXmlOutput>
                    <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
                    <xmlOutput>true</xmlOutput>
                </configuration>
            </plugin>
            <!-- CheckStyle: mvn checkstyle:checkstyle -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <configuration>
                    <outputFileFormat>xml</outputFileFormat>
                </configuration>
            </plugin>
            <!-- Cobertura: mvn cobertura:cobertura -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <configuration>
                    <formats>
                        <format>html</format>
                        <format>xml</format>
                    </formats>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

</project>
